apartments endpoints fix
