# app/Http/Requests/RegisterRequest.php
@@ -18,9 +18,12 @@ class RegisterRequest extends FormRequest
             'last_name' => 'required|string',
             'phone' => 'required|string|unique:users,phone',
             'email' => 'nullable|email|unique:users,email',
-            'password' => 'required|string|min:6',
+            'password' => 'required|string|min:5',
             'role' => 'required|in:tenant,owner',
             'birth_date' => 'nullable|date',
+            'photo' => 'nullable|string',
+            'id_photo_front' => 'nullable|string',
+            'id_photo_back' => 'nullable|string',
         ];
     }
 }
