# storage/api-docs/api-docs.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Apartment Booking API",
-        "version": "1.0.0"
+        "title": "AirBNB API",
+        "version": "1.2.4"
     },
     "paths": {
         "/api/apartments": {
@@ -485,6 +485,21 @@
                                         "type": "string",
                                         "format": "date",
                                         "example": "2000-05-10"
+                                    },
+                                    "photo": {
+                                        "type": "string",
+                                        "format": "url",
+                                        "example": "http://localhost:8000/storage/uploads/gqeLHBemszfLGTBJjJDIkPsarbPs125oqAU6OcnA.jpg"
+                                    },
+                                    "id_photo_front": {
+                                        "type": "string",
+                                        "format": "url",
+                                        "example": "http://localhost:8000/storage/uploads/gqeLHBemszfLGTBJjJDIkPsarbPs125oqAU6OcnA.jpg"
+                                    },
+                                    "id_photo_back": {
+                                        "type": "string",
+                                        "format": "url",
+                                        "example": "http://localhost:8000/storage/uploads/gqeLHBemszfLGTBJjJDIkPsarbPs125oqAU6OcnA.jpg"
                                     }
                                 },
                                 "type": "object"
@@ -542,7 +557,7 @@
                                     },
                                     "password": {
                                         "type": "string",
-                                        "example": "123456"
+                                        "example": "12345"
                                     }
                                 },
                                 "type": "object"
